Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/6734819/T6734819c.out
[attribute Y]
[flow Y]
[attribute W]
[flow W]
[attribute Z]
[flow Z]
T6734819c.java:15:11: compiler.err.unreachable.stmt
1 error
